Fix z-index

--- a/sass/event/duo-layout.sass
+++ b/sass/event/duo-layout.sass
@@ -41,7 +41,7 @@
     &.-full
       margin-left: 0
       width: 100%
-      z-index: 3
+      z-index: 10
 
 //
 // Ornamental borders
